修改配置以支持java17